hard-gists/4034526/run.log
=== Docker Run Log for 4034526 ===
Started at: Mi 29. Okt 14:18:13 CET 2025

[2025-10-29 14:18:13] START: Running container for 4034526
[2025-10-29 14:18:14] SUCCESS: Container 6727ed9c13cb8e84674e377a8b9da75291847474c9d861a669487488c094f75c started for 4034526
=== Container logs for 4034526 ===
  File "/snippet.py", line 19
    print 'Getting request token...'	
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4034526 ===
[2025-10-29 14:18:16] INFO: Container 6727ed9c13cb8e84674e377a8b9da75291847474c9d861a669487488c094f75c has stopped
